--- a/functions/package.json
+++ b/functions/package.json
@@ -15,12 +15,18 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "axios": "^1.3.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "mongodb": "^5.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.0.0"
+    "firebase-functions-test": "^3.0.0",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
