--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^5.1.0"
   },
   "devDependencies": {
+    "concurrently": "^8.0.1",
     "firebase-functions-test": "^3.0.0",
     "typescript": "^4.9.0"
   },
